# auto-punch

./: .gitmodules  package-lock.json  package.json
src/: App.css  App.tsx  Form.css  Form.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs  punch.rs  system_tray.rs
